# simplelog

./: README.md  color.py  examples.py  log_format.py  log_style.py  pyproject.toml  requirements.txt
simplelog/: README.md  log_style.py  logger.py  modifier.py
